Correct spelling of 'ViAn' to 'Vian' in HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ViAn HEALING - Trị Liệu Điện Sinh Học & Massage Spa</title>
+    <title>Vian Healing - Trị Liệu Điện Sinh Học & Massage Spa</title>
     <style>
         * {
             margin: 0;
@@ -162,7 +162,7 @@
 </head>
 <body>
     <div class="hero">
-        <h1>ViAn HEALING</h1>
+        <h1>Vian Healing</h1>
         <p class="subtitle">Trị Liệu Điện Sinh Học & Công Nghệ Thư Giãn Hiện Đại</p>
         <p>Hạ Long, Quảng Ninh</p>
     </div>
@@ -171,7 +171,7 @@
 <div class="container">
     <div class="section">
         <h2>Về Chúng Tôi</h2>
-        <p>ViAn HEALING ứng dụng điện sinh học và các thiết bị công nghệ cao như điện xung, điện trải mặt, cơ điện, hồng ngoại và hệ thống massage toàn thân.</p>
+        <p>Vian Healing ứng dụng điện sinh học và các thiết bị công nghệ cao như điện xung, điện trải mặt, cơ điện, hồng ngoại và hệ thống massage toàn thân.</p>
         <p>Dòng điện nhẹ, an toàn, có thể tác động sâu vào cơ thể, giúp làm mềm cơ, hỗ trợ lưu thông khí huyết và mang lại cảm giác thư giãn toàn diện.</p>
     </div>
     
@@ -203,7 +203,9 @@
     <div class="section">
         <h2>Thư Viện Ảnh</h2>
         <div class="gallery">
-            <div class="gallery-item">📸 Spa Interior</div>
+            <div class="gallery-item">
+                <img id="exterior" src="./IMG_3086.jpeg"></img>
+            </div>
             <div class="gallery-item">💆 Treatment Room</div>
             <div class="gallery-item">🛋️ Relaxation Area</div>
             <div class="gallery-item">🌿 Wellness Space</div>
