Add class to exterior image in gallery

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <h2>Thư Viện Ảnh</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img id="exterior" src="./IMG_3086.jpeg"></img>
+                <img id="exterior" class="gallery-item" src="./IMG_3086.jpeg"></img>
             </div>
             <div class="gallery-item">💆 Treatment Room</div>
             <div class="gallery-item">🛋️ Relaxation Area</div>
