Add new gallery items to index.html

--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
             <div class="gallery-item">
                 <img id="exterior" class="gallery-item" src="./IMG_3086.jpeg"></img>
             </div>
+
+            <div class="gallery-item">
+                <img id="desk" class="gallery-item" src="./IMG_3089.jpeg"></img>
+            </div>
             <div class="gallery-item">💆 Treatment Room</div>
             <div class="gallery-item">🛋️ Relaxation Area</div>
             <div class="gallery-item">🌿 Wellness Space</div>
