--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </head>
 <body>
     <div class="hero">
-        <h1>Vian Healing</h1>
+        <h1>Vian Healing Massage Spa</h1>
         <p class="subtitle">Trị Liệu Điện Sinh Học & Công Nghệ Thư Giãn Hiện Đại</p>
         <p>Hạ Long, Quảng Ninh</p>
     </div>
