Enhance gallery with new images and items
Added additional gallery items with images.

--- a/index.html
+++ b/index.html
@@ -206,10 +206,14 @@
             <div class="gallery-item">
                 <img id="exterior" class="gallery-item" src="./IMG_3086.jpeg"></img>
             </div>
-
-            <div class="gallery-item">
+  <div class="gallery-item">
                 <img id="desk" class="gallery-item" src="./IMG_3089.jpeg"></img>
             </div>
+
+              <div class="gallery-item">
+                <img id="view" class="gallery-item" src="./IMG_2544.jpeg"></img>
+            </div>
+          
             <div class="gallery-item">💆 Treatment Room</div>
             <div class="gallery-item">🛋️ Relaxation Area</div>
             <div class="gallery-item">🌿 Wellness Space</div>
