Update title for Vian Healing spa

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vian Healing - Trị Liệu Điện Sinh Học & Massage Spa</title>
+    <title>Vian Healing - Massage Therapy & Massage Spa</title>
     <style>
         * {
             margin: 0;
