--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     
     .gallery-item {
         height: 250px;
-        background: #ddd;
+        background: #ffed4e;
         border-radius: 15px;
         overflow: hidden;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         display: flex;
         align-items: center;
         justify-content: center;
