Add image to hero section in index.html

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
 </head>
 <body>
     <div class="hero">
+        <img class="hero" src="./IMG_3179.png"></img>
+    </div>
+    <div class="hero">
         <h1>Vian Healing Massage Spa</h1>
         <p class="subtitle">Liệu pháp xoa bóp & Công Nghệ Thư Giãn Hiện Đại</p>
         <p>Hạ Long, Quảng Ninh</p>
