--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 </head>
 <body>
     <div class="hero">
-        <img class="hero" src="./IMG_3179.png"></img>
+        <img class="gallery-item" src="./IMG_3179.png"></img>
     </div>
     <div class="hero">
         <h1>Vian Healing Massage Spa</h1>
