--- a/index.html
+++ b/index.html
@@ -96,9 +96,23 @@
         gap: 20px;
         margin-top: 40px;
     }
-    
-    .gallery-item {
+        .gallery-item {
         height: 250px;
+
+        background: #ffed4e;
+        border-radius: 15px;
+        overflow: hidden;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.2em;
+        color: #666;
+        background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    }
+    .gallery-item2 {
+        height: 250vh;
+        width: 100%;
         background: #ffed4e;
         border-radius: 15px;
         overflow: hidden;
@@ -162,7 +176,7 @@
 </head>
 <body>
     <div class="hero">
-        <img class="gallery-item" src="./IMG_3179.jpeg"></img>
+        <img class="gallery-item2" src="./IMG_3179.jpeg"></img>
     </div>
     <div class="hero">
         <h1>Vian Healing Massage Spa</h1>
