Change hero div to gallery div in index.html

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 </head>
 <body>
-    <div class="hero">
+    <div class="gallery">
         <img class="gallery-item2" src="./IMG_3179.jpeg"></img>
     </div>
     <div class="hero">
