--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     .hero {
         background: linear-gradient(135deg, #ffd700 0%, #ffed4e 100%);
-        color: #333;
+        color: white;
         padding: 80px 20px;
         text-align: center;
     }
