Replace subtitle with main heading for location

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="hero">
         <h1>Vian Healing Massage Spa</h1>
         <p class="subtitle">Liệu pháp xoa bóp & Công Nghệ Thư Giãn Hiện Đại</p>
-        <p class="subtitle">Hạ Long, Quảng Ninh</p>
+        <h1>Hạ Long, Quảng Ninh</h1>
     </div>
 
 
