Update title and headings in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vian Healing - Massage Therapy & Massage Spa</title>
+    <title>𝐕𝐢𝐀𝐧 𝐇𝐄𝐀𝐋𝐈𝐍𝐆 – 𝐏𝐡ụ𝐜 𝐇ồ𝐢 𝐂ơ - 𝐗ươ𝐧𝐠 𝐊𝐡ớ𝐩 - 𝐓𝐡ầ𝐧 𝐊𝐢𝐧𝐡 𝐯à 𝐂ô𝐧𝐠 𝐍𝐠𝐡ệ 𝐓𝐡ư 𝐆𝐢ã𝐧 𝐇𝐢ệ𝐧 Đạ𝐢</title>
     <style>
         * {
             margin: 0;
@@ -180,8 +180,8 @@
         <img class="gallery-item2" src="./IMG_3179.jpeg"></img>
     </div>
     <div class="hero">
-        <h1>ViAn Healing Massage Spa</h1>
-        <p class="subtitle">Liệu pháp xoa bóp & Công Nghệ Thư Giãn Hiện Đại</p>
+        <h1>𝐕𝐢𝐀𝐧 𝐇𝐄𝐀𝐋𝐈𝐍𝐆</h1>
+        <p class="subtitle">𝐏𝐡ụ𝐜 𝐇ồ𝐢 𝐂ơ - 𝐗ươ𝐧𝐠 𝐊𝐡ớ𝐩 - 𝐓𝐡ầ𝐧 𝐊𝐢𝐧𝐡  𝐯à 𝐂ô𝐧𝐠 𝐍𝐠𝐡ệ 𝐓𝐡ư 𝐆𝐢ã𝐧 𝐇𝐢ệ𝐧 Đạ𝐢</p>
         <h1>Hạ Long, Quảng Ninh</h1>
     </div>
 
