Revise ViAn HEALING description in index.html
Updated the description of ViAn HEALING to include additional details about the application and its benefits.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <div class="container">
     <div class="section">
         <h2>Về Chúng Tôi</h2>
-        <p>ViAn Healing ứng dụng điện sinh học và các thiết bị công nghệ cao như điện xung, điện trải mặt, cơ điện, hồng ngoại và hệ thống massage toàn thân.</p>
+        <p>ViAn HEALING ứng dụng điện sinh học kết hợp các thiết bị công nghệ cao như điện xung, điện trải mặc cơ, hồng ngoại và hệ thống massage toàn thân kết hợp thảo dược. Các dòng điện nhẹ – an toàn – được thiết kế tác động sâu vào cơ thể, giúp làm mềm cơ, khai thông khí huyết và mang lại cảm giác thư giãn toàn diện.</p>
         <p>Dòng điện nhẹ, an toàn, có thể tác động sâu vào cơ thể, giúp làm mềm cơ, hỗ trợ lưu thông khí huyết và mang lại cảm giác thư giãn toàn diện.</p>
     </div>
     
