Revise 'About Us' section for clarity and focus
Updated content to emphasize suitability for specific groups and commitment to safety and comfort.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
     <div class="section">
         <h2>Về Chúng Tôi</h2>
         <p>ViAn HEALING ứng dụng điện sinh học kết hợp các thiết bị công nghệ cao như điện xung, điện trải mặc cơ, hồng ngoại và hệ thống massage toàn thân kết hợp thảo dược. Các dòng điện nhẹ – an toàn – được thiết kế tác động sâu vào cơ thể, giúp làm mềm cơ, khai thông khí huyết và mang lại cảm giác thư giãn toàn diện.</p>
-        <p>Dòng điện nhẹ, an toàn, có thể tác động sâu vào cơ thể, giúp làm mềm cơ, hỗ trợ lưu thông khí huyết và mang lại cảm giác thư giãn toàn diện.</p>
+        <p>Chúng tôi đặc biệt phù hợp với người căng thẳng, đau mỏi lâu ngày, nhân viên văn phòng, người lớn tuổi và những ai muốn chăm sóc sức khỏe bằng phương pháp thư giãn tự nhiên, lành tính và không xâm lấn.</p>
+        <p>ViAn HEALING cam kết mang đến trải nghiệm an toàn, thoải mái và hiện đại; hỗ trợ cơ thể phục hồi tự nhiên, cải thiện hệ cơ – xương – khớp – thần kinh hiệu quả (không thay thế điều trị y khoa).</p>
     </div>
     
     <div class="features">
