Fix typo in gradient property name

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     
     .hero {
-        background: linear-gradient(135deg, #ffd700 0%, #ffed4e 100%);
+        background: linear-gradientu(135deg, #ffd700 0%, #ffed4e 100%);
 
         padding: 80px 20px;
         text-align: center;
@@ -114,7 +114,7 @@
     .gallery-item2 {
 
         width: 100%;
-
+        background: linear-gradientu(135deg, #ffd700 0%, #ffed4e 100%);
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 5px 15px rgba(0,0,0,0.2);
