--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     .gallery-item2 {
 
         width: 100%;
-        background: linear-gradientu(135deg, #ffd700 0%, #ffed4e 100%);
+
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 5px 15px rgba(0,0,0,0.2);
@@ -176,7 +176,7 @@
 
 </head>
 <body>
-    <div class="gallery">
+    <div class="hero">
         <img class="gallery-item2" src="./IMG_3179.jpeg"></img>
     </div>
     <div class="hero">
