Change background to linear gradient in gallery-item

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         .gallery-item {
         height: 250px;
 
-        background: #ffed4e;
+        background: linear-gradientu(135deg, #ffd700 0%, #ffed4e 100%);
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 5px 15px rgba(0,0,0,0.2);
