Fix gradient syntax and update background colors

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     
     .hero {
-        background: linear-gradientu(135deg, #ffd700 0%, #ffed4e 100%);
+        background: linear-gradient(135deg, #ffd700 0%, #ffed4e 100%);
 
         padding: 80px 20px;
         text-align: center;
@@ -100,7 +100,7 @@
         .gallery-item {
         height: 250px;
 
-        background: linear-gradientu(135deg, #ffd700 0%, #ffed4e 100%);
+        background: #ffed4e;
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0 5px 15px rgba(0,0,0,0.2);
@@ -176,7 +176,7 @@
 
 </head>
 <body>
-    <div class="hero">
+    <div class="gallery">
         <img class="gallery-item2" src="./IMG_3179.jpeg"></img>
     </div>
     <div class="hero">
