Remove gallery item descriptions
Removed several gallery item descriptions from the HTML.

--- a/index.html
+++ b/index.html
@@ -232,12 +232,10 @@
               <div class="gallery-item">
                 <img id="view" class="gallery-item" src="./IMG_2544.jpeg"></img>
             </div>
+                <div class="gallery-item">
+                <img id="room" class="gallery-item" src="./IMG_4027.jpeg"></img>
+            </div>
           
-            <div class="gallery-item">💆 Treatment Room</div>
-            <div class="gallery-item">🛋️ Relaxation Area</div>
-            <div class="gallery-item">🌿 Wellness Space</div>
-            <div class="gallery-item">⚡ Equipment</div>
-            <div class="gallery-item">🏖️ Halong Bay View</div>
         </div>
     </div>
     
