--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         
         <div class="map-container">
             <iframe 
-                src="https://maps.app.goo.gl/5f3BkoDu8cTBDbDq6?g_st=ic&zoom=15"
+                src="https://maps.app.goo.gl/5f3BkoDu8cTBDbDq6?g_st=ic"
                 allowfullscreen="" 
                 loading="lazy" 
                 referrerpolicy="no-referrer-when-downgrade">
