--- a/index.html
+++ b/index.html
@@ -253,9 +253,8 @@
         </div>
         
         <div class="map-container">
-     
-             <iframe 
-                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8&q=A2+15+KDT+Monbay+Phuong+Ha+Long+Quang+Ninh+Vietnam&zoom=15"
+     <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3728.234!2d107.068!3d20.963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjDCsDU3JzQ3LjAiTiAxMDfCsDA0JzA1LjAiRQ!5e0!3m2!1sen!2s!4v1"
                 allowfullscreen="" 
                 loading="lazy" 
                 referrerpolicy="no-referrer-when-downgrade">
