Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>𝐕𝐢𝐀𝐧 𝐇𝐄𝐀𝐋𝐈𝐍𝐆 – 𝐏𝐡ụ𝐜 𝐇ồ𝐢 𝐂ơ - 𝐗ươ𝐧𝐠 𝐊𝐡ớ𝐩 - 𝐓𝐡ầ𝐧 𝐊𝐢𝐧𝐡 𝐯à 𝐂ô𝐧𝐠 𝐍𝐠𝐡ệ 𝐓𝐡ư 𝐆𝐢ã𝐧 𝐇𝐢ệ𝐧 Đạ𝐢</title>
-    
+    <meta name="google-site-verification" content="5Q1JJDjpAWdq9jX0NaT6m_vq1M1jufpirbvijlmcHxM" />
     <!-- SEO Meta Tags -->
     <meta name="description" content="ViAn HEALING - Spa massage hiện đại tại Hạ Long, Quảng Ninh. Ứng dụng điện sinh học, điện xung, massage toàn thân. Giúp thư giãn, giảm căng thẳng, đau mỏi. ☎ +84 971 672 262">
     <meta name="keywords" content="massage Hạ Long, spa Quảng Ninh, điện sinh học, trị liệu điện xung, massage toàn thân, spa Monbay, ViAn HEALING, thư giãn Hạ Long, giảm đau mỏi, chăm sóc sức khỏe">
